# libpdf

./: .gitignore  .readthedocs.yml  AUTHORS  LICENSE  README.rst  pylintrc  pyproject.toml  ruff-lint.toml  tox.ini
.github/workflows/: policy.xml  publish.yml  tox.yml
docs/: conf.py  index.rst
docs/_static/: mystyle.css
docs/contents/: api.rst  changelog.rst  concepts_features.rst  contribution.rst  examples.rst  installation.rst  pdf_model.puml  pdf_model.rst  quickstart.rst  support.rst  visual_debugging.rst
examples/: __init__.py  lib_usage_example.py  poppler_pillow.py
libpdf/: __init__.py  _import_forks.py  apiobjects.py  catalog.py  core.py  exceptions.py  extract.py  log.py  parameters.py  process.py  progress.py  tables.py  textbox.py  utils.py
libpdf/models/: __init__.py  chapter.py  coord.py  element.py  figure.py  file.py  file_meta.py  horizontal_box.py  link.py  model_base.py  page.py  paragraph.py  position.py  rect.py  root.py  table.py
tests/: __init__.py  conftest.py  test_api.py  test_catalog.py  test_cli.py  test_details.py  test_ds93_chapter.py  test_figures.py  test_full_features.py  test_import.py  test_poppler_pillow.py  test_rects.py  test_tables.py  test_word_colors.py
tests/pdf/: .~lock.test_words_color_style.odt#  DS93-chapter-issue-fix.odt  full_features.odt  test_words_color_style.odt
